// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-global-vars > 'globalVars function' 1`] = `
[
  DefinePlugin {
    "definitions": {
      "process.env.ASSET_PREFIX": "\\"\\"",
      "process.env.NODE_ENV": "\\"test\\"",
    },
  },
  DefinePlugin {
    "definitions": {
      "ENV": "\\"test\\"",
      "TARGET": "\\"web\\"",
    },
  },
]
`;

exports[`plugin-global-vars > 'globalVars' 1`] = `
[
  DefinePlugin {
    "definitions": {
      "process.env.ASSET_PREFIX": "\\"\\"",
      "process.env.NODE_ENV": "\\"test\\"",
    },
  },
  DefinePlugin {
    "definitions": {
      "import.meta.bar": "{\\"a\\":\\"bar\\",\\"b\\":false,\\"c\\":{\\"d\\":42}}",
      "process.env.foo": "\\"foo\\"",
      "window.baz": "[null,\\"baz\\"]",
    },
  },
]
`;
